--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,8 @@
 version: 2
-
 jobs:
   build:
     docker:
-      - image: circleci/golang
+      - image: circleci/golang:1.12.0
 
     steps:
       - checkout
@@ -13,7 +12,10 @@ jobs:
       - run:
           name: test
           command: |
-            make test
+            export PATH="$GOBIN:$PATH"
+            go env
+            go version
+            make tools && make lint && make test
       - save_cache:
           key: go-mod-v1-{{ checksum "go.sum" }}
           paths:
